<resources>
    <string name="app_name">Clutch Client</string>
    <string name="serch_title">Search</string>
    <string name="add_card">Add card</string>
    <string name="my_cards">My cards</string>
    <string name="online_cards">Air cards</string>
    <string name="share_app">Share app</string>
    <string name="close">close</string>
    <string name="open">Open</string>
    <string name="gear">Settings</string>
    <string name="lorem">lorem</string>
    <string name="action_delete_card">Delete card</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="b_scan_barckode">Add barckode</string>
    <string name="card_front_side">Front side</string>
    <string name="card_back_side">Back side</string>
    <string name="number_card">Card number</string>
    <string name="comment_card">Comment</string>
    <string name="card_list">Cards</string>
    <string name="country_select">Country</string>
    <string name="action_search">Search</string>
    <string name="scaner_activity_title">Scan your card</string>
    <string name="menu_discount_point">Discount map</string>
    <string name="txt_version_bottom">ver</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="hint_password_rep">Repeat password</string>
    <string name="btn_registration">Sign Up</string>
    <string name="e_invalid_email">Invalid email</string>
    <string name="e_short_password">Password must be more than 5 symbol</string>
    <string name="e_password_not_same">Check your passwords. They is not same</string>
    <string name="e_user_already_existing">User with same email already existing</string>
    <string name="link_registration">Sign Up?</string>
    <string name="toolbar_registration">Sign up</string>
    <string name="toolbar_personal_info">Personal info</string>
    <string name="btn_save">Save</string>
    <string name="toolbar_discount_map">Discount map</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_gps_message">Please switch on your GPS for find you on the map</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_contacts">Contacts</string>
    <string name="e_check_internet">Check your internet connection</string>
    <string name="e_invalid_login">Invalid login</string>
    <string name="shoping_maps">Shoping maps</string>
    <string name="t_barcode">Barcode</string>
    <string name="t_info">Info</string>
    <string name="t_open_window">Open maps?</string>
    <string name="t_agree_open">Are you sure that want open map?</string>
    <string name="b_no">No</string>
    <string name="b_yes">Yes</string>
    <string name="settings_notification">Nofification Settings</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="settings_application">Application Settings</string>
    <string name="settings_change_location">Change Location</string>
    <string name="input_country">Input country</string>
    <string name="menu_log_out">Log out</string>
    <string name="msg_log_out_agree">Are you sure that want to log out? You are going to input credentials again?</string>
    <string name="title_log_out">Log out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="separatet_or">or</string>
    <string name="facebook">Facebook</string>
    <string name="login_with_google">Sign In with Google</string>
    <string name="login_with_facebook">Sign In with facebook</string>
    <string name="dont_have_account">Don`t have an account?</string>
    <string name="dialog_rate_us_titles">Do you like our app?</string>
    <string name="email_rate_us_subject">Clutch client</string>
    <string name="email_rate_us_text">Tell us how we can improve Clutch app:</string>
    <string name="email_chooser_text">Send feedback</string>
    <string name="btn_add_new_company">Add other company</string>
    <string name="txt_mock_warning">Some mock warning</string>
    <string name="settings_display">Display Settings</string>
    <string name="settings_display_card_view">Display Card</string>
    <string name="txt_card_view_row">Row</string>
    <string name="txt_card_view_column">Column</string>
    <string name="btn_add_card">Add card</string>
    <string name="toolbar_addition_card">Card edit</string>
    <string name="settings_available_share">Available share with you</string>
    <string name="settings_support_service">Support service</string>
    <string name="settings_log_out">Log out</string>
    <string name="settings_country_not_detect">Country not detect</string>
    <string name="card_added">Card added, you may add more info or left this screen</string>
    <string name="image_upload_fale">Image upload is fale</string>
    <string name="image_upload_success">Image uploading is success</string>
    <string name="card_added_failure">Card added is faile</string>

    <string name="facebook_app_id">839614823053747</string>
    <string name="fb_login_protocol_scheme">fb839614823053747</string>
    <string name="info_code_card_already_added">Card already added</string>
    <string name="info_card_updated_success">Card updated success</string>
    <string name="info_card_added_success">Card added success. You may extand information</string>
    <string name="h_title_card">Title card</string>
    <string name="h_number_card">Number card</string>
    <string name="info_get_success">Get information success</string>
    <string name="e_card_number_can_not_be_empy">Card number can`t be empty</string>
    <string name="menu_item_update">Update</string>
    <string name="btn_update_card">Update card</string>
    <string name="online_cards_under_developing">Air cards under developing</string>
    <string name="slogan">We are your trusted partner for managing your discount cards</string>
    <string name="photo_card">Photo card</string>
    <string name="additional_info">Additional Info</string>
    <string name="menu_item_remove">Remove</string>
    <string name="settings_login_and_sync_your_card">Sign in and sync your card</string>
    <string name="settings_account">Account</string>
    <string name="access_group">Access group</string>


</resources>
