<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.authorization.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_tollbar"
        android:background="@color/main_color"
        android:minHeight="@dimen/dimen_tollbar"
        android:fitsSystemWindows="true"
        android:elevation="2dp"
        app:title="@string/toolbar_registration"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:titleTextColor="@color/colorWhite"
        android:titleTextColor="@color/colorWhite"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/app_background" />

    <ProgressBar
        android:id="@+id/pb_freeze"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop">
    </ProgressBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_email"
                style="@style/LoginEditText"
                android:hint="@string/hint_email"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/LoginEditText"
                android:hint="@string/hint_password"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_password_rep"
                style="@style/LoginEditText"
                android:hint="@string/hint_password_rep"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_35"
                    android:layout_height="@dimen/dimen_35"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:layout_width="@dimen/dimen_35"
                    android:layout_height="@dimen/dimen_35"
                    android:layout_marginLeft="@dimen/dimen_16"
                    android:layout_marginRight="@dimen/dimen_16"
                    android:src="@drawable/ic_facebook" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_registration_one"
                style="@style/LoginButton"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/btn_registration" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>