<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.SettingActivity"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_display"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/display_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/icon_notification"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14"
                        android:text="@string/settings_display_card_view"/>

                    <TextView
                        android:id="@+id/display_card_status_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/text_14"
                        android:text="@string/enabled"/>

                </LinearLayout>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/push_notifications_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/icon_notification"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14"
                        android:text="@string/settings_push_notifications"/>

                    <TextView
                        android:id="@+id/notifications_status_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/text_14"
                        android:text="@string/enabled"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_application"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/current_location_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/icon_location" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_change_location"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14" />

                    <TextView
                        android:id="@+id/current_view_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/text_14"
                        tools:text="Current View: IL003 LOREN HYUNDAI" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>